assets/src/styles/feed_list.scss
@import "variables";
$spacing: 7px;
$feed-item-height: 100px;
$feed-item-width: 150px;
$ripple-color: $accent;
$ripple-alpha: 0.7;

@keyframes ripple {
  0%
  {
    box-shadow:
    0 0 0 0 rgba($ripple-color, $ripple-alpha),
  }

  100%
  {
    box-shadow:
    0 0 0 90px rgba($ripple-color, 0);
  }
}

.feed-list {
  grid-area: feed-list;
  list-style: none;
  display: flex;
  background-color: $light;
  width: 100%;
  overflow-x: auto;
  padding: $spacing;
  margin: 0px;
  min-height: $feed-item-height + 2 * $spacing;
  min-width: $feed-item-width + 2 * $spacing;

  @media (min-width: #{map-get($grid-breakpoints, md)}) {
    flex-direction: column;
    height: 100%;
  }

  .feed-item {
    color: $light;
    background-color: $accent;
    width: 150px;
    height: 100px;
    flex-shrink: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 3px;
    overflow: hidden;

    &.feed-item:not(:last-of-type) {
      margin-right: $spacing;

      @media (min-width: #{map-get($grid-breakpoints, md)}) {
        margin-right: 0;
        margin-bottom: $spacing;
      }
    }

    &.loading {
      background-color: #ccc;
    }

    .feed-item-loader {
      border-radius: 50px;
      background-color: $ripple-color;
      height: 20px;
      width: 20px;
      -webkit-animation: ripple 1s linear infinite;
      animation: ripple 1s linear infinite;
    }

    a {
      color: $light;
      height: 100%;
      width: 100%;
    }

  }
}

